deps/v8/test/message/fail/object-rest-assignment-pattern.out
*%(basename)s:5: SyntaxError: `...` must be followed by an assignable reference in assignment contexts
({...{}} = {});
     ^^
SyntaxError: `...` must be followed by an assignable reference in assignment contexts
